# x-opengl-game-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Xlnut/: CMakeLists.txt
Xlnut/asset/: .gitignore
Xlnut/asset/scene/: 3DExample.x  Example.x  PinkCube.x
Xlnut/asset/shader/: FlatColor.glsl  Texture.glsl
Xlnut/src/: XInutApp.cpp  editor_layer.cpp  editor_layer.h
Xlnut/src/panel/: content_browser_panel.cpp  content_browser_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h
cmake/: ImGuizmo.cmake  entt.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  shaderc.cmake  spdlog.cmake  stb.cmake  yaml_cpp.cmake
cmake/toolchains/: apple-clang.cmake  linux-gcc.cmake
engine/: CMakeLists.txt
engine/src/: pch.h  test.cpp  x-test.h  x_engine.h
engine/src/engine/: core.h  entry_point.h  layer.cpp  window.cpp  window.h  x_application.cpp  x_application.h  x_log.cpp  x_log.h
engine/src/engine/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/src/platform/: linux_window.cpp  linux_window.h  mac_window.cpp  mac_window.h
engine/src/platform/linux/: linux_input.cpp  linux_input.h  linux_platform_util.cpp  linux_window.cpp  linux_window.h
engine/src/platform/mac/: mac_input.cpp  mac_input.h  mac_platform_util.mm  mac_window.cpp  mac_window.h
engine/src/platform/opengl/: open_gl_buffer.cpp  open_gl_buffer.h  open_gl_context.cpp  open_gl_context.h  open_gl_framebuffer.cpp  open_gl_framebuffer.h  open_gl_renderer_api.cpp  open_gl_renderer_api.h  open_gl_shader.cpp  open_gl_shader.h  open_gl_texture.cpp  open_gl_texture.h  open_gl_uniform_buffer.cpp  open_gl_uniform_buffer.h  open_gl_vertex_array.cpp  open_gl_vertex_array.h
engine/src/x/: core.h  entry_point.h  input.cpp  input.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  window.cpp  window.h  x_application.cpp  x_application.h  x_log.cpp  x_log.h
engine/src/x/core/: base.h  core.h  entry_point.h  input.cpp  input.h  key_codes.h  layer.cpp  layer.h  mouse_codes.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  platform_detection.h  timer.h  timestep.h  x_application.cpp  x_application.h  x_assert.h  x_log.cpp  x_log.h
engine/src/x/debug/: instrumentor.h
engine/src/x/events/: application_event.h  event.h  key_event.h  mouse_event.h
engine/src/x/imgui/: im_gui_layer.cpp  im_gui_layer.h
engine/src/x/math/: math.cpp  math.h
engine/src/x/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  editor_camera.cpp  editor_camera.h  frame_buffer.cpp  frame_buffer.h  graphics_context.cpp  graphics_context.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_2D.cpp  renderer_2D.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h
engine/src/x/scene/: component.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  scene_serializer.cpp  scene_serializer.h  scriptable_entity.h
engine/src/x/util/: platform_util.cpp  platform_util.h
engineInut/: CMakeLists.txt
engineInut/src/: editor_layer.cpp
enginelnut/: CMakeLists.txt
enginelnut/asset/shader/: Texture.glsl
enginelnut/src/: XInutApp.cpp  editor_layer.h
sandbox/: CMakeLists.txt  imgui.ini
sandbox/asset/shader/: FlatColor.glsl  Texture.glsl
sandbox/src/: Application.cpp  example_layer.cpp  example_layer.h  sandbox_2D.cpp  sandbox_2D.h  sandbox_application.cpp
tests/: CMakeLists.txt
